--- a/materials/00_intro.tex
+++ b/materials/00_intro.tex
@@ -187,8 +187,8 @@ Simulated futures from an ETS model
 \placefig{.5}{6.2}{width=2.4cm}{tsibble.png}
 \placefig{2.9}{6.2}{width=2.4cm}{feasts.png}
 \placefig{5.3}{6.2}{width=2.4cm}{fable.png}
-\begin{textblock}{7.5}(13.6,-.1)
-  {\fontsize{9}{9}\sf\color{Orange}bit.ly/fable2023}
+\begin{textblock}{7.5}(10.6,-.1)
+  {\fontsize{9}{9}\sf\color{Orange}https://workshop.f4sg.org/africast/}
 \end{textblock}
 }
 
@@ -391,28 +391,39 @@ Simulated futures from an ETS model
 \tightlist
 \item
   Free and online
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Not an in-depth technical book
-  \item
-    Mindset behind forecasting
-  \item
-    Overview of forecasting methods and processes
-  \end{itemize}
+\item
+  Not an in-depth technical book
+\item
+  Mindset behind forecasting
+\item
+  Overview of forecasting methods and processes
 \end{itemize}
 \end{frame}
 
-\begin{frame}{International Institute of Forecasters}
-\protect\hypertarget{international-institute-of-forecasters}{}
+\begin{frame}{International Institute of Forecasters (IIF)}
+\protect\hypertarget{international-institute-of-forecasters-iif}{}
 \begin{itemize}
+\item
+  Certificate will be provided by IIF. You need to attend all lectures
+  and exercise sessions to get the certificate.
 \item
   a nonprofit organization founded in 1982, is dedicated to developing
   and furthering the generation, distribution, and use of knowledge on
   forecasting
+\end{itemize}
+\end{frame}
+
+\begin{frame}{\href{https://www.f4sg.org/}{Forecasting for Social Good
+committee}}
+\protect\hypertarget{forecasting-for-social-good-committee}{}
+\begin{itemize}
+\tightlist
 \item
-  \href{https://www.f4sg.org/}{Forecasting for Social Good}
+  \href{https://www.linkedin.com/company/f4sg/}{Follow us on Linkedin}
+\item
+  \href{https://twitter.com/FSG_forecast}{Follow us on Twitter}
+\item
+  Use \#AFRICAST, \#F4SG if you post on social media about the workshop
 \end{itemize}
 \end{frame}
 
@@ -473,7 +484,9 @@ experienced are you in forecasting}}
 \FunctionTok{install.packages}\NormalTok{(}\FunctionTok{c}\NormalTok{(}
   \StringTok{"tidyverse"}\NormalTok{,}
   \StringTok{"fpp3"}\NormalTok{,}
-  \StringTok{"GGally"}
+  \StringTok{"GGally"}\NormalTok{,}
+  \StringTok{"sugrrants"}\NormalTok{,}
+  \StringTok{"astsa"}
 \NormalTok{))}
 \end{Highlighting}
 \end{Shaded}
@@ -502,6 +515,23 @@ experienced are you in forecasting}}
 \end{alertblock}
 \end{frame}
 
+\begin{frame}{Schedule for each session (UK time zone)}
+\protect\hypertarget{schedule-for-each-session-uk-time-zone}{}
+\begin{itemize}
+\tightlist
+\item
+  Start at 08:00 a.m.
+\item
+  Lecture 1: 08:00 - 09:30
+\item
+  Break: 09:30 - 09:45
+\item
+  Lecture 2: 09:45 - 11:15
+\item
+  Check your group on Slack for mentorship sessions
+\end{itemize}
+\end{frame}
+
 \begin{frame}{Access materials}
 \protect\hypertarget{access-materials}{}
 \begin{itemize}
@@ -509,7 +539,9 @@ experienced are you in forecasting}}
 \item
   AFRICAST workshop website
 \item
-  Slack for mentorship and Q/A
+  Mentorship sessions and Q/A
+\item
+  Slack
 \end{itemize}
 \end{frame}
 
