--- a/materials/header.tex
+++ b/materials/header.tex
@@ -69,8 +69,8 @@ Simulated futures from an ETS model
 \placefig{.5}{6.2}{width=2.4cm}{tsibble.png}
 \placefig{2.9}{6.2}{width=2.4cm}{feasts.png}
 \placefig{5.3}{6.2}{width=2.4cm}{fable.png}
-\begin{textblock}{7.5}(13.6,-.1)
-  {\fontsize{9}{9}\sf\color{Orange}bit.ly/fable2023}
+\begin{textblock}{7.5}(10.6,-.1)
+  {\fontsize{9}{9}\sf\color{Orange}https://workshop.f4sg.org/africast/}
 \end{textblock}
 }
 
